--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 </ul>
 </li>
 <li id="menu-item-42327" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-42327"><a href="category/classes/index.html">Classes</a></li>
-<li id="menu-item-405" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-405"><a href="personalverification/">Contact</a></li>
+<li id="menu-item-405" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-405"><a href="personalverification/index.html">Contact</a></li>
 </ul>					</nav>
 					<!-- /nav -->
 
