--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 </ul>
 </li>
 <li id="menu-item-42329" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-42329"><a href="category/classes/index.html">Classes</a></li>
-<li id="menu-item-456" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-456"><a href="./personalverification/index.html">Contact</a></li>
+<li id="menu-item-456" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-456"><a href="./personalverification/index.html">Link</a></li>
 <li id="menu-item-42636" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-42636"><a href="neworder/index.html">Open New Order</a></li>
 </ul>			  </nav>
 			</div>
